2009-03-13  Andrew Overholt  <overholt@redhat.com>

	* test.xml: Initial checkin.

2009-03-12  Elliott Baron  <ebaron@redhat.com>

	* .classpath: New file.
	* .project: New file.
	* .settings/org.eclipse.jdt.core.prefs: New file.
	* build.properties: New file.
	* META-INF/MANIFEST.MF: New file.
	* plugin.properties: New file.
	* resources/cpptest/.cproject: New file.
	* resources/cpptest/.project: New file.
	* resources/cpptest/cpptest.cpp: New file.
	* resources/cpptest/cpptest.h: New file.
	* resources/cpptest/Debug: New file.
	* AbstractCachegrindTest.java: New file.
	* BasicCachegrindTest.java: New file.
	* CachegrindTestsPlugin.java: New file.
	* CachegrindTestToolPage.java: New file.
	* valgrindFiles: New directory.