@@ -2,4 +2,9 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.properties
+               plugin.properties,\
+               resources/,\
+               about.html,\
+               valgrindFiles/,\
+               test.xml
+
